tests/toy/neg/001702_mutation.toylang
program a = { while while a do sleep; } .
